--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,7 @@ body {
   padding: 0;
   background: #f2f4f5;
   color: #1e1e1f;
-  font-family: -apple-system, BlinkMacSystemFont, 'Montserrat', Arial, Helvetica, sans-serif, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
