--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -15,6 +15,11 @@
     align-items: center;
     height: 64px;
     width: 64px;
+
+    transform: rotate(0);
+    transition: .3s ease;
+
+    z-index: 1;
 }
 
 .CreateTodoButton:hover {
