--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -1,23 +1,12 @@
 .ModalBackground {
-    background: rgba(32, 35, 41, .8);
+    background: rgba(32,35,41,.8);
     position: fixed;
     top: -10px;
     left: -10px;
-    right: 24px;
-    /*bottom: -10px;*/
-    font-weight: bold;
-    color: #fafafa;
+    right: -10px;
+    bottom: -10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 64px;
-    width: 64px;
-
-    transform: rotate(0);
-    transition: .3s ease;
-    z-index: 1;
-}
-
-.ModalBackground:hover {
-    transform: rotate(224deg);
+    color: white;
 }
